# eegprep

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  CNAME  DOCUMENTATION_ARCHITECTURE_DIAGRAMS.md  DOCUMENTATION_BUILD_FIX_PLAN.md  DOCUMENTATION_INFRASTRUCTURE_PLAN.md  DOCUMENTATION_QUICK_REFERENCE.md  DevNotes.md  Dockerfile  HARNESS.md  ICL_feature_extractor.py  ICL_feature_extractor_compare.m  ICL_feature_extractor_compare_helper.py  LICENSE  MANIFEST.in  README.md  SPHINX_GALLERY_TROUBLESHOOTING.md  TODO.md  changelog.html  clean_windows_simple.m  clean_windows_test.m  compare_variables.m  config.json.example  contributing.html  development.html  ds002680_iclabel.m  eeg_autocorr.py  eeg_autocorr_compare.m  eeg_autocorr_compare_helper.py  eeg_autocorr_fftw.py  eeg_autocorr_fftw_compare.m  eeg_autocorr_fftw_compare_helper.py  eeg_autocorr_welch.py  eeg_autocorr_welch_compare.m  eeg_eeglab2mne.py  eeg_iclabelcompare.m  (+59 more)
.doctrees/: changelog.doctree  contributing.doctree  development.doctree  faq.doctree  glossary.doctree  index.doctree  references.doctree  sg_execution_times.doctree
.doctrees/api/: core.doctree  ica.doctree  index.doctree  io.doctree  preprocessing.doctree  signal_processing.doctree  utils.doctree
.doctrees/auto_examples/: index.doctree  plot_artifact_removal.doctree  plot_basic_preprocessing.doctree  plot_bids_pipeline.doctree  plot_channel_interpolation.doctree  plot_ica_and_iclabel.doctree  sg_execution_times.doctree
.doctrees/examples/: index.doctree
.doctrees/user_guide/: advanced_topics.doctree  bids_workflow.doctree  configuration.doctree  index.doctree  installation.doctree  preprocessing_pipeline.doctree  quickstart.doctree
.github/workflows/: claude-code-review.yml  claude.yml  docs-qa.yml  docs.yml  docstring-validation.yml  pages.yml  test.yml
_downloads/5b37628fc88781e07fe6fd42065f3c08/: plot_bids_pipeline.ipynb
_downloads/811d208b87fa0ed1afc45e5e6326a682/: plot_ica_and_iclabel.ipynb
_downloads/aa2159de212bd2dbcf2e0b186d23da4e/: plot_channel_interpolation.ipynb
_downloads/c6e7643aeb673033f1e37c4bc504024b/: plot_artifact_removal.ipynb
_downloads/cc03e6f6f48055c0c64be4c8bef1fac5/: plot_basic_preprocessing.ipynb
_sources/: changelog.rst.txt  index.rst.txt  references.rst.txt  sg_execution_times.rst.txt
_sources/api/: signal_processing.rst.txt
_sources/auto_examples/: plot_artifact_removal.rst.txt  plot_basic_preprocessing.rst.txt  plot_bids_pipeline.rst.txt  plot_channel_interpolation.rst.txt  plot_ica_and_iclabel.rst.txt  sg_execution_times.rst.txt
api/: core.html  ica.html  index.html  io.html  preprocessing.html  signal_processing.html  utils.html
auto_examples/: index.html  plot_artifact_removal.html  plot_basic_preprocessing.html  plot_bids_pipeline.html  plot_channel_interpolation.html  plot_ica_and_iclabel.html  sg_execution_times.html
compare_icas/: README_comparison.md  compare_extended_ica.txt  compare_ica_randomization.py  compare_ica_versions.py  compare_ica_weight_init.py  compare_sphere.txt  compare_standard_ica.txt  compute_amari_and_component_matching.py  compute_amari_and_component_matching_full.py
docs/: DEPLOYMENT.md  GITHUB_PAGES_SETUP.md  Makefile  QA_CHECKLIST.md  STYLE_GUIDE.md  VERSIONING.md  gui_porting_principles.md
docs/source/: changelog.rst  conf.py  contributing.rst  development.rst  faq.rst  glossary.rst  index.rst  references.rst  sg_execution_times.rst
examples/: index.html
matlab/: iclabel_full_compare_2.m
notebooks/: oct2pytest.ipynb  picard_standard3.m  pipeline.ipynb  playground2.ipynb  sandbox.ipynb  test.ipynb  test_matlab_picard.m  test_picard_py_vs_mat.ipynb  test_picard_py_vs_mat.m
resources/: eeg_options_64bit.m
resources/montages/: biosemi-sccn-128v1.locs  egi-gsn-hydrocell-129.locs  (+1 more)
sample_data/: eeglab_data_with_ica_tmp.set
sample_notebooks/: oct2pytest.ipynb  pipeline.ipynb  playground2.ipynb  sandbox.ipynb  test.ipynb  test_mne_iclabel.ipynb
scripts/: README.md  bids_minimal_preproc.py  bids_pipeline.m  bids_preproc_accuracy_report.py  bids_preproc_accuracy_report_new.py  build_derivative.py  computeg.m  eeg_interp.py  generate_ica_comparison_plot.m  make_release.py  mne_epoch_conversion_example.py  mne_iclabel_script.py  spheric_spline.m  test_bids_preproc_expanse.py  test_flask.py  tmp_pipeline_for_ppt.py
tests/: ICL_feature_extractor_compare.m  ICL_feature_extractor_compare_helper.py  __init__.py  compare_iclabel_engines.py  conftest.py  eeg_autocorr_compare.m  eeg_autocorr_compare_helper.py  eeg_autocorr_fftw_compare.m  eeg_autocorr_fftw_compare_helper.py  eeg_autocorr_welch_compare.m  eeg_autocorr_welch_compare_helper.py  eeg_rpsd_compare_helper.py  fixtures.py  iclabel_compare_with_features_tmp.m  main_compare.m  test_ICL_feature_extractor.py  test_ICL_feature_extractor_parity.py  test_bids_preproc.py  test_bids_preproc_old.py  test_cart2topo.py  test_clean_artifacts.py  test_clean_asr.py  test_clean_drifts.py  test_clean_flatlines.py  test_clean_rawdata.py  test_clean_windows.py  test_eeg_amica.py  test_eeg_autocorr.py  test_eeg_autocorr_fftw.py  test_eeg_autocorr_welch.py  test_eeg_checkset.py  test_eeg_checkset_eventconsistency.py  test_eeg_compare.py  test_eeg_decodechan.py  test_eeg_eeg2mne.py  test_eeg_eegrej.py  test_eeg_emptyset.py  test_eeg_interp.py  test_eeg_lat2point.py  test_eeg_mne2eeg.py  (+62 more)
tests_matlab/: MATLAB_To_Python_conversion  MATLAB_To_Python_conversion.md  ds002680_iclabel.m  eeg_autocorr_compare_helper.py  eeg_autocorr_fftw_compare.m  eeg_autocorr_fftw_compare_helper.py  eeg_autocorr_welch_compare.m  eeg_autocorr_welch_compare_helper.py  eeg_iclabelcompare_features.m  eeg_rpsd_compare.m  iclabel_compare.m  iclabel_compare_helper.py  iclabel_compare_with_features_tmp.m  pop_reref_compare.m  pop_reref_compare_helper.py  simple_test_octave.m  simple_test_octave.py  topoplot_compare.m  topoplot_compare_helper.py
tools/: __init__.py
user_guide/: advanced_topics.html  bids_workflow.html  configuration.html  index.html  installation.html  preprocessing_pipeline.html  quickstart.html
(+381 files in other folders)
