[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eegprep"
dynamic = ["version"]
authors = [
  { name="Arnaud Delorme", email="adelorme@gmail.com" },
  { name="Young Truong", email="dt.young112@gmail.com" },
]
description = "EEG preprocessing pipeline on Python"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
keywords = ["eeg", "preprocessing", "EEGLAB"]
dependencies = [
  "colorama>=0.4.6",
  "h5py>=3.3.0",
  "matplotlib>=3.4.0",
  "mne>=1.10.0",
  "neo>=0.14.2",
  "numpy>=1.20",
  "oct2py>=5.5.0",
  "psutil>=7.0.0",
  "pybids>=0.4",
  "pyedflib>=0.1.42",
  "python-picard>=0.8,<0.9",
  "scipy>=1.7.0",
  "sympy>=1.14.0",
  "threadpoolctl>=3.6.0",
]

[project.optional-dependencies]
torch = [
  "torch>=2.5.1"
]
eeglabio = [
  "eeglabio>=0.1.2"
]
docs = [
  "sphinx>=7.0",
  "pydata-sphinx-theme>=0.14.0",
  "sphinx-gallery>=0.14.0",
  "sphinx-autodoc-typehints>=1.25.0",
  "numpydoc>=1.6.0",
  "sphinx-design>=0.5.0",
  "myst-parser>=1.0.0",
  "sphinx-copybutton>=0.5.0",
  "sphinx-togglebutton>=0.3.0",
  "sphinxcontrib-spelling>=7.1.0"
]
all = [
  "eegprep[torch]",
  "eegprep[eeglabio]",
  "eegprep[docs]",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["eegprep.eeglab*"]

[tool.setuptools.package-data]
"eegprep" = [
  "resources/montages/*.locs",
  "resources/montages/README.md",
  "resources/*.m",
  "netICL.mat"
]

[tool.setuptools.exclude-package-data]
"eegprep" = ["eeglab/**"]

[tool.setuptools.dynamic]
version = { attr = "eegprep.__version__" }

[project.urls]
Homepage = "https://github.com/sccn/eegprep"
Issues = "https://github.com/sccn/eegprep/issues"
