[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eegprep"
dynamic = ["version"]
authors = [
  { name="Arnaud Delorme", email="adelorme@gmail.com" },
  { name="Young Truong", email="dt.young112@gmail.com" },
]
description = "EEG preprocessing pipeline on Python"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
keywords = ["eeg", "preprocessing", "EEGLAB"]
dependencies = [
  "colorama>=0.4.6",
  "eeglabio>=0.1.2",
  "h5py>=3.3.0",
  "matplotlib>=3.4.0",
  "mne>=1.10.0",
  "neo>=0.14.2",
  "numpy>=1.20",
  "oct2py>=5.5.0",
  "psutil>=7.0.0",
  "pybids>=0.4",
  "pyedflib>=0.1.42",
  "python-picard>=0.8,<0.9",
  "scipy>=1.7.0",
  "sympy>=1.14.0",
  "threadpoolctl>=3.6.0",
]

[project.optional-dependencies]
torch = [
  "torch>=2.0"
]
eeglabio = [
  "eeglabio>=0.1.2"
]
gui = [
  "PySide6>=6.6"
]
docs = [
  "sphinx>=7.0",
  "pydata-sphinx-theme>=0.14.0",
  "sphinx-gallery>=0.14.0",
  "sphinx-autodoc-typehints>=1.25.0",
  "numpydoc>=1.6.0",
  "sphinx-design>=0.5.0",
  "myst-parser>=1.0.0",
  "sphinx-copybutton>=0.5.0",
  "sphinx-togglebutton>=0.3.0",
  "sphinxcontrib-spelling>=7.1.0"
]
all = [
  "eegprep[torch]",
  "eegprep[eeglabio]",
  "eegprep[gui]",
  "eegprep[docs]",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pyyaml>=6.0",
  "tomli>=2.0; python_version < '3.11'",
]
release = [
  "build>=1.2",
  "twine>=5.0",
]

[tool.uv]
constraint-dependencies = [
  # Keep uv-managed development installs on wheel-compatible releases for
  # older SCCN Linux servers; these constraints are not published package
  # requirements.
  "contourpy<1.3.3",
  "greenlet<3.3",
  "h5py<3.15",
  "numpy<2.3",
  "pandas<2.3.3",
  "pyzmq<27",
  "scikit-learn<1.8",
  "scipy<1.17",
]
required-environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
]
markers = [
  "slow: tests that are too slow for quick local iteration",
  "matlab: tests that require MATLAB or MATLAB Engine",
  "octave: tests that require Octave",
  "gui: tests that exercise GUI behavior",
  "visual: visual parity capture or comparison tests",
  "parity: numerical or behavioral parity tests against EEGLAB/MATLAB",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["eegprep.eeglab*"]

[tool.setuptools.package-data]
"eegprep" = [
  "resources/help/*.md",
  "resources/montages/*.locs",
  "resources/montages/README.md",
  "resources/*.m",
  "plugins/ICLabel/netICL.mat"
]

[tool.setuptools.exclude-package-data]
"eegprep" = ["bin/*", "eeglab/**"]

[tool.setuptools.dynamic]
version = { attr = "eegprep.__version__" }

[project.urls]
Homepage = "https://github.com/sccn/eegprep"
Issues = "https://github.com/sccn/eegprep/issues"
